<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MovieDetails">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:background="#11223B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#11223B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- ToolBar widget -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Movies"
                app:titleTextColor="#ffff" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"

                android:background="@drawable/ic_baseline_dehaze_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/ic_baseline_share_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/ivMovie"
        android:layout_width="@dimen/dp_150"
        android:layout_height="180dp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:srcCompat="@tools:sample/avatars" />

    <!--    <TextView-->
    <!--        android:id="@+id/tvName"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginLeft="20dp"-->
    <!--        android:text="TextView"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="@dimen/_20sdp"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/ivMovie"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/ivMovie" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/tvRating"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginLeft="20dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:text="TextView"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="@dimen/_15sdp"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/ivMovie"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tvName" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/tvtype"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginLeft="20dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:text="TextView"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="@dimen/_15sdp"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/ivMovie"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tvRating" />-->

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"

        android:text="@string/movie_name"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_25"
        app:layout_constraintStart_toEndOf="@id/ivMovie"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/rating"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/ivMovie"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvHash1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_5"

        android:text="@string/hash"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@id/tvRating"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_5"

        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@id/tvHash1"
        app:layout_constraintTop_toBottomOf="@id/tvName" />


    <TextView
        android:id="@+id/hash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_5"

        android:text="@string/hash"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@id/tvtype"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView"

        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintStart_toEndOf="@+id/hash2"
     />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toEndOf="@id/ivMovie"
        app:layout_constraintTop_toBottomOf="@id/tvName">

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/circulorr_bg"
            android:gravity="fill"
            android:text="   CRIME"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/circulorr_bg"
            android:gravity="fill"
            android:text="   MYSTERY"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/circulorr_bg"

            android:gravity="fill"
            android:text="   DRAMA"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@drawable/stars"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@id/ivMovie"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/circulor_bg"
        android:padding="@dimen/_7sdp"
        android:text="Book Now"
        android:textColor="#0000ff"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/synopsis"
        android:textColor="@color/black"
        android:textSize="@dimen/_23sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_20sdp"
                android:text="sample test"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>